--- a/VideoGameApi/appsettings.json
+++ b/VideoGameApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLExpress;Database=VideoGameDb;Trusted_Connexion=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost\\SQLExpress;Database=VideoGameDb;Trusted_Connection=true;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
